limpeza de código + correções para compilação html